# Inkstone

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
context/: architecture.md  data-model.md  ipad-connectivity.md  milestones.md
src/: main.rs
src/annotations/: mod.rs
src/app/: mod.rs
src/crdt/: mod.rs
src/pdf/: mod.rs
src/protocol/: mod.rs
src/renderer/: mod.rs
src/tablet_server/: mod.rs
tablet-ui/: index.html
