[package]
name = "inkstone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
automerge = "0.7.4"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
futures-util = "0.3.32"
pdfium-render = { version = "0.8.37", features = ["thread_safe"] }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
